--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "peerjs": "^1.4.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
