--- a/package.json
+++ b/package.json
@@ -3,20 +3,40 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@joebobmiles/y-react": "^1.2.0",
     "lodash": "^4.17.21",
-    "peerjs": "^1.4.6",
+    "nanoid": "^4.0.1",
+    "peerjs": "^1.4.7",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.9.0",
+    "y-presence": "^0.2.3",
+    "y-webrtc": "^10.2.5",
+    "yjs": "^13.5.50",
+    "zustand": "^4.3.6",
+    "vite": "^4.2.0",
+    "@vitejs/plugin-react": "^3.1.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "vite": "^2.9.9"
+    "@babel/eslint-parser": "^7.21.3",
+    "@babel/preset-react": "^7.18.6",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.36.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.21"
   }
 }
