--- a/package.json
+++ b/package.json
@@ -11,17 +11,27 @@
   "dependencies": {
     "@joebobmiles/y-react": "^1.2.0",
     "lodash": "^4.17.21",
-    "nanoid": "^4.0.1",
     "peerjs": "^1.4.7",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
     "react-router-dom": "^6.9.0",
     "y-presence": "^0.2.3",
     "y-webrtc": "^10.2.5",
     "yjs": "^13.5.50",
-    "zustand": "^4.3.6",
     "vite": "^4.2.0",
-    "@vitejs/plugin-react": "^3.1.0"
+    "@vitejs/plugin-react": "^3.1.0",
+    "@react-three/cannon": "^6.5.2",
+    "@react-three/drei": "^9.57.3",
+    "@react-three/fiber": "^8.12.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "nanoid": "^4.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-merge-refs": "^2.0.1",
+    "react-scripts": "^5.0.1",
+    "react-spring": "^9.7.1",
+    "three": "^0.150.1",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.21.3",
