add turn checks to TicTacToe

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-merge-refs": "^2.0.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
