--- a/package.json
+++ b/package.json
@@ -11,45 +11,30 @@
   "dependencies": {
     "@joebobmiles/y-react": "^1.2.0",
     "@react-three/cannon": "^6.5.2",
-    "@react-three/drei": "^9.57.3",
+    "@react-three/drei": "^9.61.4",
     "@react-three/fiber": "^8.12.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@vitejs/plugin-react": "^3.1.0",
-    "lodash": "^4.17.21",
-    "nanoid": "^4.0.1",
-    "peerjs": "^1.4.7",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
-    "react-merge-refs": "^2.0.1",
-    "react-router-dom": "^6.9.0",
-    "react-scripts": "^5.0.1",
-    "react-serialize": "^0.2.1",
-    "react-spring": "^9.7.1",
-    "three": "^0.150.1",
-    "vite": "^4.2.0",
-    "y-presence": "^0.2.3",
-    "y-webrtc": "^10.2.5",
-    "yjs": "^13.5.50",
-    "zustand": "^4.3.6",
-    "zustand-middleware-yjs": "^1.3.0-rc.1"
+    "react-router-dom": "^6.10.0",
+    "three": "^0.151.2",
+    "zustand": "^4.3.7",
+    "vite": "^4.2.1",
+    "@vitejs/plugin-react": "^3.1.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.21.3",
     "@babel/preset-react": "^7.18.6",
-    "@types/react": "^18.0.28",
+    "@types/react": "^18.0.32",
     "@types/react-dom": "^18.0.11",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.36.0",
+    "eslint": "^8.37.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.21"
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
