--- a/.eslintrc
+++ b/.eslintrc
@@ -34,7 +34,11 @@
     "no-multi-assign": "off",
     "class-methods-use-this": "off",
     "react/no-access-state-in-setstate": "off",
-    "array-callback-return": "off"
+    "array-callback-return": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "no-continue": "off",
+    "no-param-reassign": "off"
   },
   "env": {
     "browser": true
