--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@react-three/cannon": "^6.5.2",
     "@react-three/drei": "^9.61.4",
     "@react-three/fiber": "^8.12.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "lodash": "^4.17.21",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.10.0",
     "three": "^0.151.2",
-    "zustand": "^4.3.7",
     "vite": "^4.2.1",
-    "@vitejs/plugin-react": "^3.1.0"
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.21.3",
