--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-react": "^7.18.6",
     "@types/react": "^18.0.32",
     "@types/react-dom": "^18.0.11",
+    "@vitest/ui": "^0.31.1",
     "eslint": "^8.37.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
