--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.10.0",
     "three": "^0.151.2",
+    "use-sound": "^4.0.1",
     "vite": "^4.2.1",
-    "zustand": "^4.3.7"
+    "zustand": "^4.3.7",
+    "vitest": "^0.31.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.21.3",
@@ -42,7 +44,6 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "vitest": "^0.31.1"
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
