--- a/.eslintrc
+++ b/.eslintrc
@@ -38,7 +38,9 @@
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off",
     "no-continue": "off",
-    "no-param-reassign": "off"
+    "no-param-reassign": "off",
+    "no-loop-func": "off",
+    "no-constant-condition": "off"
   },
   "env": {
     "browser": true
