--- a/package.json
+++ b/package.json
@@ -13,37 +13,36 @@
   },
   "dependencies": {
     "@joebobmiles/y-react": "^1.2.0",
-    "@react-three/cannon": "^6.5.2",
-    "@react-three/drei": "^9.61.4",
-    "@react-three/fiber": "^8.12.0",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@react-three/cannon": "^6.6.0",
+    "@react-three/drei": "^9.102.6",
+    "@react-three/fiber": "^8.15.19",
+    "@vitejs/plugin-react": "^4.2.1",
     "lodash": "^4.17.21",
-    "nanoid": "^4.0.2",
+    "nanoid": "^5.0.6",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.0",
-    "react-router-dom": "^6.10.0",
-    "three": "^0.151.2",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.22.3",
+    "three": "^0.162.0",
     "use-sound": "^4.0.1",
-    "vite": "^4.2.1",
-    "zustand": "^4.3.7",
-    "vitest": "^0.31.1"
+    "vite": "^5.2.6",
+    "vitest": "^1.4.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.21.3",
-    "@babel/preset-react": "^7.18.6",
-    "@types/react": "^18.0.32",
-    "@types/react-dom": "^18.0.11",
-    "@vitest/ui": "^0.31.1",
-    "eslint": "^8.37.0",
+    "@babel/eslint-parser": "^7.24.1",
+    "@babel/preset-react": "^7.24.1",
+    "@types/react": "^18.2.69",
+    "@types/react-dom": "^18.2.22",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
