--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
     "lodash": "^4.17.21",
     "nanoid": "^5.1.5",
     "react": "^19.1.0",
@@ -28,18 +27,19 @@
     "react-router-dom": "^7.5.2",
     "three": "^0.176.0",
     "use-sound": "^5.0.0",
-    "vite": "^6.3.3",
-    "vitest": "^3.1.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.26.3",
-    "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "eslint": "^9.25.1",
+    "@types/react": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0"
+    "eslint": "^9.25.1",
+    "knip": "^5.50.5",
+    "vite": "^6.3.3",
+    "vitest": "^3.1.2"
   }
 }
